- Fixed bug: Horizontal nav with many elements not centered for mobile view #2736

--- a/jquery.fullPage.css
+++ b/jquery.fullPage.css
@@ -1,5 +1,5 @@
 /*!
- * fullPage 2.9.4
+ * fullPage 2.9.5
  * https://github.com/alvarotrigo/fullPage.js
  * MIT licensed
  *
@@ -119,11 +119,13 @@ html.fp-enabled,
 .fp-slidesNav{
     position: absolute;
     z-index: 4;
-    left: 50%;
     opacity: 1;
     -webkit-transform: translate3d(0,0,0);
     -ms-transform: translate3d(0,0,0);
     transform: translate3d(0,0,0);
+    left: 0 !important;
+    right: 0;
+    margin: 0 auto !important;
 }
 .fp-slidesNav.bottom {
     bottom: 17px;
